Term spawn fix and multiline spawn commands - Fixed bug spawing terms where if you came back to the page, it would load another one even if already exists - Can now execute multiple lines of command at startup, break the line with \r - Updated demo.html with multi term presentation - If other objects share same closest div as terminal, it will be removed to prevent ugly things (especially if you use shape object from slides.com to create your terminal space) - Terminal fake menu buttons have been move from top-left to top-right

--- a/css/term.css
+++ b/css/term.css
@@ -23,7 +23,7 @@
   cursor: pointer;
 }
 .fakeClose {
-  margin-left: 12px;
+  margin-right: 12px;
   background-color: #ff3b47;
   border-color: #9d252b;
 }
@@ -46,6 +46,7 @@
   -moz-box-shadow: 0px 0px 36px 0px rgba(0,0,0,0.59);
   box-shadow: 0px 0px 36px 0px rgba(0,0,0,0.59);
   overflow: hidden;
+  text-align: right;
 }
 .fakeMenu > span {
   font-size: 0.8em;
@@ -71,7 +72,7 @@
   background-color: black;
   box-sizing: border-box;
   width: inherit;
-  height: calc(100% + 32px);
+  /* height: calc(100% + 32px); */
   padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
